# mi-parsing

./: .envrc  .gitignore  Cargo.toml  flake.nix  main.ipynb  parse_txt.py  perSystem.nix  poetry.toml  pyproject.toml
src/: main.rs
