[tool.poetry]
name = "mi-parsing"
version = "0.1.0"
description = ""
authors = ["Fernando Ayats <ayatsfer@gmail.com>"]
readme = "README.md"
packages = [{include = "mi_parsing"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.259"
textract = "^1.6.5"
openai = "^0.27.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
